--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "rimraf ./dist && tsc -p tsconfig.json",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint \"{src,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage"
   },
@@ -36,30 +36,30 @@
     "url": "https://github.com/appotter/nestjs-graylog/issues"
   },
   "dependencies": {
-    "@nestjs/common": "^8.4.7",
+    "@nestjs/common": "^9.0.11",
     "graylog2": "^0.2.1"
   },
   "devDependencies": {
-    "@nestjs/config": "^1.2.1",
-    "@nestjs/core": "^8.4.7",
-    "@nestjs/testing": "^8.4.7",
-    "@types/jest": "^28.1.6",
-    "@types/node": "^18.7.3",
-    "eslint": "^8.21.0",
-    "eslint-config-prettier": "^8.3.0",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.0.11",
+    "@nestjs/testing": "^9.0.11",
+    "@types/jest": "^28.1.8",
+    "@types/node": "^18.7.13",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.2.0",
-    "jest": "28.1.3",
-    "prettier": "^2.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^28.1.3",
+    "prettier": "^2.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "source-map-support": "^0.5.20",
-    "ts-jest": "28.0.7",
+    "source-map-support": "^0.5.21",
+    "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.2"
   },
   "peerDependencies": {
-    "@nestjs/common": "^8.4.7",
+    "@nestjs/common": "^8.0.0 || ^9.0.0",
     "graylog2": "^0.2.1"
   },
   "jest": {
