--- a/package.json
+++ b/package.json
@@ -36,30 +36,30 @@
     "url": "https://github.com/appotter/nestjs-graylog/issues"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.11",
+    "@nestjs/common": "^8.0.0 || ^9.0.0 || ^10.0.0",
     "graylog2": "^0.2.1"
   },
   "devDependencies": {
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.11",
-    "@nestjs/testing": "^9.0.11",
-    "@types/jest": "^28.1.8",
-    "@types/node": "^18.7.13",
-    "eslint": "^8.23.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^28.1.3",
-    "prettier": "^2.7.1",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.3.1",
+    "@nestjs/testing": "^10.3.1",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.13",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.4",
+    "reflect-metadata": "^0.1.14",
+    "rimraf": "^5.0.5",
     "source-map-support": "^0.5.21",
-    "ts-jest": "^28.0.8",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
-    "@nestjs/common": "^8.0.0 || ^9.0.0",
+    "@nestjs/common": "^8.0.0 || ^9.0.0 || ^10.0.0",
     "graylog2": "^0.2.1"
   },
   "jest": {
